NetBSD Problem Report #48850

From jgw@sdf.org  Thu May 29 23:43:26 2014
Return-Path: <jgw@sdf.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher ECDHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 0EEF0A651B
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 29 May 2014 23:43:26 +0000 (UTC)
Message-Id: <20140529234317.8418A1F1FA2@ituner.sleepy.cat>
Date: Thu, 29 May 2014 16:43:17 -0700 (PDT)
From: jgw@sdf.org
Reply-To: jgw@sdf.org
To: gnats-bugs@NetBSD.org
Subject: netstat -i => ifnet: symbol not defined
X-Send-Pr-Version: 3.95

>Number:         48850
>Category:       bin
>Synopsis:       netstat(1) ifnet: symbol not defined
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu May 29 23:45:00 +0000 2014
>Closed-Date:    Fri May 30 01:47:26 +0000 2014
>Last-Modified:  Fri May 30 01:50:00 +0000 2014
>Originator:     jgw
>Release:        NetBSD 6.99.43
>Organization:

>Environment:


System: NetBSD ituner.sleepy.cat 6.99.43 NetBSD 6.99.43 (GENERIC) #0: Sun May 25 19:08:27 UTC 2014 builds@b41.netbsd.org:/home/builds/ab/HEAD/i386/201405251620Z-obj/home/builds/ab/HEAD/src/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:

Something changed in /usr/bin/netstat such that it's not able to locate
the system network interfaces when passed the either "-i" or "-I <nic>",
the typical usage as found in /etc/daily:

example:

  % ifconfig -l
  vr0 lo0

  % netstat -i
  ifnet: symbol not defined

  % netstat -I lo0
  ifnet: symbol not defined

  % netstat -I vr0
  ifnet: symbol not defined

The bug is not in recent 5.x snapshots but does appear in 6.x and current

>How-To-Repeat:

See above.

>Fix:

Probably need to fix something in /src/usr.bin/netstat/if.c

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Fri, 30 May 2014 01:47:26 +0000
State-Changed-Why:
Fixed, thanks.  This was a problem only in a recent -current.
6.x is not affected.


From: "Mindaugas Rasiukevicius" <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48850 CVS commit: src
Date: Fri, 30 May 2014 01:44:21 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Fri May 30 01:44:21 UTC 2014

 Modified Files:
 	src/usr.bin/netstat: main.c
 	src/usr.sbin/ifmcstat: ifmcstat.c

 Log Message:
 netstat(1) and ifmcstat(8): ifnet was renamed to ifnet_list, PR/48850.


 To generate a diff of this commit:
 cvs rdiff -u -r1.90 -r1.91 src/usr.bin/netstat/main.c
 cvs rdiff -u -r1.12 -r1.13 src/usr.sbin/ifmcstat/ifmcstat.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.