netstat(1) and ifmcstat(8): ifnet was renamed to ifnet_list, PR/48850.